리스트에 없는 장르 추가 제거

--- a/preprocessing/MovieGenreFillna.ipynb
+++ b/preprocessing/MovieGenreFillna.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 99,
    "id": "d40446a6",
    "metadata": {},
    "outputs": [],
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 100,
    "id": "9a1418d7",
    "metadata": {},
    "outputs": [],
@@ -378,6 +378,84 @@
    "source": [
     "movies = movies_merge[movies_merge.title.isin(not_exist) == False]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 141,
+   "id": "00cd1720",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "movies.genres = movies.genres.str.replace(\"Music\", \"Musical\")\n",
+    "movies.genres = movies.genres.str.replace(\"Musicalal\", \"Musical\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 142,
+   "id": "4d128a00",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "genre_list = [\"Action\", \"Adventure\", \"Animation\", \"Biography\", \"Children\", \"Comedy\", \"Crime\", \"Documentary\", \"Drama\", \"Fantasy\",\n",
+    "              \"Film-Noir\", \"History\", \"Horror\", \"Musical\", \"Mystery\", \"Romance\", \"Sport\", \"Sci-Fi\", \"Thriller\", \"War\", \"Western\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 143,
+   "id": "16d69889",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "genres = movies.genres\n",
+    "to_row = [g.split('|') for g in genres]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 144,
+   "id": "ed5b6dd8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "movies.genres = to_row"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 146,
+   "id": "60ccede6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "to_drop = []\n",
+    "for i, lst in enumerate(list(movies.genres)):\n",
+    "    for g in lst:\n",
+    "        if g not in genre_list:\n",
+    "            lst.remove(g)\n",
+    "            \n",
+    "    if len(lst) == 0:\n",
+    "        to_drop.append(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 149,
+   "id": "85bf3072",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "movies.drop(to_drop, axis=0, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "274b4e80",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
