--- a/preprocessing/MovieGenreFillna.ipynb
+++ b/preprocessing/MovieGenreFillna.ipynb
@@ -382,7 +382,7 @@
   {
    "cell_type": "code",
    "execution_count": 141,
-   "id": "00cd1720",
+   "id": "c9ca7177",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -392,8 +392,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
-   "id": "4d128a00",
+   "execution_count": 165,
+   "id": "e44cb681",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -403,46 +403,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
-   "id": "16d69889",
+   "execution_count": 170,
+   "id": "5cd323ce",
    "metadata": {},
    "outputs": [],
    "source": [
-    "genres = movies.genres\n",
-    "to_row = [g.split('|') for g in genres]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 144,
-   "id": "ed5b6dd8",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "movies.genres = to_row"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 146,
-   "id": "60ccede6",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "to_drop = []\n",
     "for i, lst in enumerate(list(movies.genres)):\n",
     "    for g in lst:\n",
     "        if g not in genre_list:\n",
     "            lst.remove(g)\n",
     "            \n",
+    "to_drop = []            \n",
+    "for i, lst in enumerate(list(movies.genres)):    \n",
     "    if len(lst) == 0:\n",
+    "        to_drop.append(i)\n",
+    "    elif \"\" in lst:\n",
     "        to_drop.append(i)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
-   "id": "85bf3072",
+   "execution_count": 171,
+   "id": "75066075",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -451,15 +433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "274b4e80",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 173,
    "id": "30424567",
    "metadata": {},
    "outputs": [],
